# docassemble-MATCMotionToAmend

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
docassemble/MATCMotionToAmend/data/questions/: main_motion_to_amend.yml  motion_to_amend.yml
docassemble/MATCMotionToAmend/data/templates/: motion_to_amend.docx
